force-app/main/default/objects/Leave_Application__c/Leave_Application__c.object-meta.xml
<CustomObject>
    <label>Leave Record</label>
    <nameField>
        <displayFormat>L-{0000000000}</displayFormat>
        <label>Leave Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leave Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>