force-app/main/default/objects/Leave_Application__c/fields/Approval_Statuses__c.field-meta.xml
<CustomField>
    <fullName>Approval_Statuses__c</fullName>
    <formula>TEXT(Employee_Leave_Application__r.Approval_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Status</label>
    <type>Text</type>
</CustomField>