force-app/main/default/objects/Leave_Application__c/fields/Attendance__c.field-meta.xml
<CustomField>
    <fullName>Attendance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attendance</label>
    <referenceTo>Attendance__c</referenceTo>
    <relationshipName>Leave_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>