force-app/main/default/objects/Leave_Application__c/fields/Employee_Leave_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Employee_Leave_Allowance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Leave Allowance</label>
    <referenceTo>Employee_Leave_Allowance__c</referenceTo>
    <relationshipName>Leave_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>