force-app/main/default/objects/Leave_Application__c/fields/Employee_Leave_Application__c.field-meta.xml
<CustomField>
    <fullName>Employee_Leave_Application__c</fullName>
    <label>Employee Leave Application</label>
    <referenceTo>Employee_Leave_Application__c</referenceTo>
    <relationshipName>Leave_Applications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>