force-app/main/default/objects/Leave_Application__c/fields/Leave_For__c.field-meta.xml
<CustomField>
    <fullName>Leave_For__c</fullName>
    <label>Leave For</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>First Half</fullName>
            </value>
            <value>
                <fullName>Second Half</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>