force-app/main/default/objects/Leave_Application__c/fields/Leave_Types__c.field-meta.xml
<CustomField>
    <fullName>Leave_Types__c</fullName>
    <label>Leave Types</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sick Leave</fullName>
            </value>
            <value>
                <fullName>Earned Leave</fullName>
            </value>
            <value>
                <fullName>Casual Leave</fullName>
            </value>
            <value>
                <fullName>Maternity Leave</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>