force-app/main/default/objects/Leave_Application__c/fields/Number_of_Days__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days__c</fullName>
    <formula>IF( ISBLANK(Start_Date__c) || ISBLANK(End_Date__c), 0, IF( TEXT (Leave_Period__c)= &quot;Half Day&quot;, 0.5, (End_Date__c - Start_Date__c + 1) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>