force-app/main/default/objects/Leave_Application__c/fields/Reason_For_Leave__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Leave__c</fullName>
    <label>Reason For Leave</label>
    <type>TextArea</type>
</CustomField>