force-app/main/default/objects/Leave_Application__c/fields/Used_Earned_Leave__c.field-meta.xml
<CustomField>
    <fullName>Used_Earned_Leave__c</fullName>
    <label>Used Earned Leave</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>