force-app/main/default/objects/Leave_Application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Leave_Types__c</columns>
    <columns>Number_of_Days__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Approval_Statuses__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Leave Records</label>
</ListView>