force-app/main/default/objects/Leave_Application__c/listViews/All_Leave_Application.listView-meta.xml
<ListView>
    <fullName>All_Leave_Application</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Leave_Types__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Approval_Statuses__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Leave Records</label>
    <sharedTo>
        <group>System_Admin_Group</group>
    </sharedTo>
</ListView>